perf: batch-load play states, audio tracks, albums, and child counts in getItems (C3)
Eliminates N+1 queries in ItemsController.getItems():
- playStateService.getPlayStatesForItems() — 1 query for all items
- audioTrackRepository.findAllByIdInWithRelations() — 1 query for all tracks
- albumRepository.findAllByIdInWithArtist() — 1 query for all albums
- audioTrackRepository.countByAlbumIdIn() — 1 COUNT GROUP BY for album sizes
- albumRepository.countByArtistIdIn() — 1 COUNT GROUP BY for artist album counts

Before: 100 tracks = 200+ SQL queries
After: 100 tracks = 5 SQL queries

New batch query methods added:
- AudioTrackRepository.countByAlbumIdIn(Collection<UUID>)
- AlbumRepository.countByArtistIdIn(Collection<UUID>)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>